# ProjectRepo

./: .gitmodules
GraphicalUserInterface/GUISandbox/: project.json  project.json~
GraphicalUserInterface/GUISandbox/include/: GUISandbox.h
GraphicalUserInterface/GUISandbox/src/: GUISandbox.cpp  main.cpp~
KernelModule/: CMakeLists.txt~  Kernel.c  Kernel.c~  build.sh  build.sh~  test.txt
UserInterface/: build.sh  pipe  pipe.c  rule_file.txt  startPipe  urls.text
UserInterface/Sandbox/: project.json  project.json~
UserInterface/Sandbox/include/: Sandbox.h  Sandbox.h~  bake_config.h
UserInterface/Sandbox/src/: Sandbox.cpp
UserInterface/Tests/: temp.json
UserInterface/UI/: project.json  project.json~
UserInterface/UI/include/: UI.h  bake_config.h
UserSpaceModule/: CMakeLists.txt  build.sh
UserSpaceModule/Sandbox/: main.cpp  project.json
UserSpaceModule/Tests/: CMakeLists.txt  CMakeLists.txt~
UserSpaceModule/UserSpace/: CMakeLists.txt  project.json
UserSpaceModule/UserSpace/include/: UserSpace.h
UserSpaceModule/UserSpace/include/UserSpace/: HttpPacket.h  IncomingQueue.h  OutgoingQueue.h  Packet.h  PacketQueue.h  PipeManager.h  QueueManager.h  Rules.h  bake_config.h
UserSpaceModule/UserSpace/src/: HttpPacket.cpp  HttpPacket.cpp~  IncomingQueue.cpp  IncomingQueue.cpp~  OutgoingQueue.cpp  OutgoingQueue.cpp~  Packet.cpp  PacketQueue.cpp  PacketQueue.cpp~  PipeManager.cpp  PipeManager.cpp~  Rules.cpp  packet.cpp~  rules.cpp~
UserSpaceModule/build.debug/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
(+64 files in other folders)
